--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -1,3 +1,16 @@
 page-about {
 
 }
+$colors: (
+
+
+primary:    #387ef5,
+secondary:  #32db64,
+danger:     #f53d3d,
+light:      #f4f4f4,
+dark:       #222,
+twitter:(
+  base: #55acee,
+  contrast: #ffffff
+  )
+);
