Changed the style

--- a/src/pages/sell/sell.scss
+++ b/src/pages/sell/sell.scss
@@ -1,3 +1,23 @@
 page-sell {
+	.butterMilk{
+
+		background: #FAEFD4
+	}
+
+
+	.stone{
+
+		background: #688B8A
+	}
+
+	.sage{
+
+		background: #A08084
+	}
+
+	.pink{
+		background: #e8bdc4
+	}
+
 
 }
