--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -1,4 +1,23 @@
 page-about {
+	.butterMilk{
+
+		background: #FAEFD4
+	}
+
+
+	.stone{
+
+		background: #688B8A
+	}
+
+	.sage{
+
+		background: #A08084
+	}
+
+	.pink{
+		background: #e8bdc4
+	}
 
 }
 $colors: (
