--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -1,3 +1,22 @@
 page-contact {
 
+	.butterMilk{
+
+		background: #FAEFD4
+	}
+
+
+	.stone{
+
+		background: #688B8A
+	}
+
+	.sage{
+
+		background: #A08084
+	}
+
+	.pink{
+		background: #e8bdc4
+	}
 }
