--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -24,11 +24,16 @@ $font-path: "../assets/fonts";
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #387ef5,
+   primary:    #387ef5,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  stone:	#688B8A,
+  sage:		#A08084,
+  buttermilk: #FAEFD4,
+  leather:	#A57C65,
+  greenish: #cfdacc
 );
 
 
