Midnight Ian Commit

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -33,7 +33,7 @@ page-home {
 	.card {
   		padding-top: 1px;
   		padding-bottom: 1px;
-  		background: #cfdacc; 
+  		background: #FAEFD4; 
   		font-family: "Georgia", times, serif;
   		font-size: 120px;
   }
