--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -31,9 +31,9 @@ $colors: (
   dark:       #222,
   stone:	#688B8A,
   sage:		#A08084,
-  buttermilk: #FAEFD4,
+  buttermilk: #cfdacc,
   leather:	#A57C65,
-  greenish: #cfdacc
+  greenish: #FAEFD4
 );
 
 
